--- a/html/contact.html
+++ b/html/contact.html
@@ -120,6 +120,8 @@
           <span data-i18n="contact.form.message">Message</span>
           <textarea name="message" rows="5" required></textarea>
         </label>
+        <input type="hidden" name="LANGUAGE" id="mc-language">
+
 
         <button type="submit">
           <span data-i18n="contact.form.submit">Send Message</span>
