--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title data-i18n="meta.title">Weidmann Reinigungen</title>
+  
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
@@ -74,7 +75,7 @@
       <div class="hero-content">
         <h1 data-i18n="hero.title">Your Trusted Swiss Cleaning Service</h1>
         <p data-i18n="hero.subtitle">Professional, reliable, and local cleaning for homes and small businesses.</p>
-        <a href="html/contact.html" class="btn primary" data-i18n="hero.cta">Book Now</a>
+        <a href="html/contact.html" class="btn primary" data-i18n="hero.cta">Get a Free Quote!</a>
       </div>
     </section>
 
