i changed the cta text

--- a/html/services.html
+++ b/html/services.html
@@ -58,7 +58,7 @@
     <div class="hero-content">
       <h1 data-i18n="services.title">Our Services</h1>
       <p data-i18n="services.subtitle">Professional cleaning tailored to your home or business in Switzerland.</p>
-      <a href="contact.html" class="btn primary" data-i18n="about.hero.cta">Book a Cleaning</a>
+      <a href="contact.html" class="btn primary" data-i18n="hero.cta">Get a Free Quote!</a>
     </div>
   </section>
 
