--- a/html/about.html
+++ b/html/about.html
@@ -64,7 +64,7 @@
     <div class="hero-content">
       <h1 data-i18n="about.hero.title">About Us</h1>
       <p data-i18n="about.hero.subtitle">Reliable cleaning services you can trust.</p>
-      <a href="contact.html" class="btn primary" data-i18n="about.hero.cta">Book a Cleaning</a>
+      <a href="contact.html" class="btn primary" data-i18n="hero.cta">Get a Free Quote!</a>
     </div>
   </section>
 
